[package]
name = "audio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
cpal = "0.13.4"
crossbeam = "0.8.1"
egui = "0.13.1"
egui_glium = "0.13.1"
glium = "0.30.1"
ndarray = "0.15.3"
puffin = "0.6.0"
puffin_http = "0.3.0"
puremp3 = "0.1.0"
rustfft = "6.0.1"
